# WTR-EC-Training

./: 01-stm32基础，环境配置.md  10.29提纲.md  push.cmd  readme.md
01-stm32基础，环境配置/: 01-stm32基础，环境配置.md  EIDE工作流.md
02-muiti-files-programing/: 02-多文件编程.md
02-muiti-files-programing/multi_file_project/: CMakeLists.txt  PrintAdd.c  PrintAdd.h  TriAdd.c  TriAdd.h  main.c
02-muiti-files-programing/sample_project/: CMakeLists.txt  main.c
02-muiti-files-programing/single_file_project/: CMakeLists.txt  main.c
02-muiti-files-programing/single_project/: CMakeLists.txt
03-GPIO/: 03-GPIO.md
04-串口/: uart_printf.c  串口.md
05-timer&bldc/: 05-timer&bldcm.md  （task）实现PWM 呼吸灯 spwm 定时器中断  （预习）05-timer&bldcm.md
06-stm32 can&dji_3508/: （task）dji_3508.md  （预习）stm32_can.md
07-dji_joy&as69_toy/: （task）as69_com.md  （task）dji_joy.md  （预习）as69及其遥控器.md
09-freertos&FSM/: FSM.md  freertos.md  （task）自行设计一个程序，要求用到freertos和fsm.md  （预习）freertos&FSM.md
10-ROS_to_stm32/: （task）上位机学习  （预习）ROS.md
Tips合集/: FreeRTOS的线程安全.md  git.md  ubuntu使用eide.md  ubuntu基础知识.md  vscode eide 小技巧.md  代码编写规范.md  各种坑及问题.md
add-stm32_hal/: stm32_selflearning.md
mavlink/: mavlink.md
中断和freertos/: 中断和freertos.md
